--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <nav>
                 <ul>
                     <li><a href="#nosotros">Sobre Nosotros</a></li>
+                    <li><a href="#novedades">Novedades</a></li>
                     <li><a href="#series">Series</a></li>
                     <li><a href="#peliculas">Películas</a></li>
-                    <li><a href="#novedades">Novedades</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
@@ -98,6 +98,7 @@
                     <div class="news_card_head">
                         <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
+                        <span class="novedad">NOVEDAD</span>
                     </div>
                     <div class="news_card_body">
                         <h2 class="news_card_body_nombre">Serie</h2>
@@ -118,6 +119,8 @@
                     <div class="news_card_head">
                         <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
+                        <span class="novedad">NOVEDAD</span>
+
                     </div>
                     <div class="news_card_body">
                         <h2 class="news_card_body_nombre">Pelicula</h2>
@@ -138,6 +141,7 @@
                     <div class="news_card_head">
                         <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
+                        <span class="novedad">NOVEDAD</span>
                     </div>
                     <div class="news_card_body">
                         <h2 class="news_card_body_nombre">Serie</h2>
@@ -158,6 +162,7 @@
                     <div class="news_card_head">
                         <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
+                        <span class="novedad">NOVEDAD</span>
                     </div>
                     <div class="news_card_body">
                         <h2 class="news_card_body_nombre">Serie</h2>
@@ -178,6 +183,7 @@
                     <div class="news_card_head">
                         <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-film"></i></i></span>
+                        <span class="novedad">NOVEDAD</span>
                     </div>
                     <div class="news_card_body">
                         <h2 class="news_card_body_nombre">Pelicula</h2>
