--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
             <a href="/">
                 <h1>MovieReviews</h1>
             </a>
-            <input type="search" name="buscador" id="buscador" placeholder="Buscar Pelicula/Serie">
+            <div>
+                <input type="search" name="buscador" id="buscador" placeholder="Buscar Pelicula/Serie">
+                <input type="radio" name="option" id="movie" value="movie" checked>
+                <label for="movie">Movie</label>
+                <input type="radio" name="option" id="serie" value="serie">
+                <label for="serie">Serie</label>
+
+            </div>
             <nav>
                 <ul>
                     <li><a href="#nosotros">Sobre Nosotros</a></li>
@@ -94,111 +101,8 @@
             <h3>En este apartado en contraras todas las novedades realcionadas a series y peliculas</h3>
 
             <div class="news_container">
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
-                        <span class="novedad">NOVEDAD</span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Serie</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
-                        <span class="novedad">NOVEDAD</span>
-
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Pelicula</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
-                        <span class="novedad">NOVEDAD</span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Serie</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
-                        <span class="novedad">NOVEDAD</span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Serie</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-film"></i></i></span>
-                        <span class="novedad">NOVEDAD</span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Pelicula</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
+                
+                
             </div>
         </section>
 
