Update html  news_container

--- a/index.html
+++ b/index.html
@@ -100,10 +100,7 @@
 
             <h3>En este apartado en contraras todas las novedades realcionadas a series y peliculas</h3>
 
-            <div class="news_container">
-                
-                
-            </div>
+            <div class="news_container"></div>
         </section>
 
         <section id="series">
