Incrustacion de pelis y series en su propia seccion

--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
         <section id="novedades">
 
             <h2><a href="#home">#</a>Novedades</h2>
-            <span><h5>Para ver todas las novedades <a href="/novedades">Ingrese aquí</a>.</h5></span>
 
             <h3>En este apartado en contraras todas las novedades realcionadas a series y peliculas</h3>
 
@@ -106,228 +105,22 @@
         <section id="series">
 
             <h2><a href="#home">#</a>Series</h2>
-            <span><h5>Para ver todas las Series <a href="/series">Ingrese aquí</a>.</h5></span>
-
             <h3>
                 En este apartado en contraras todas las series en nuestro catalogo
             </h3>
 
-            <div class="news_container">
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Serie</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Serie</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Serie</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Serie</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-tv"></i></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Serie</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <div class="news_container"></div>
 
         </section>
 
         <section id="peliculas">
 
             <h2><a href="#home">#</a>Películas</h2>
-            <span><h5>Para ver todas las Películas <a href="/peliculas">Ingrese aquí</a>.</h5></span>
-
             <h3>
                 En este apartado en contraras todas las películas en nuestro catálogo
             </h3>
 
-            <div class="news_container">
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Película</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info">
-                            <i class="fa-solid fa-film"></i>
-                        </span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Película</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Película</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Película</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="news_card">
-                    <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
-                        <span class="novedad_info"><i class="fa-solid fa-film"></i></i></span>
-                    </div>
-                    <div class="news_card_body">
-                        <h2 class="news_card_body_nombre">Película</h2>
-                        <p class="news_card_body_descripcion">
-                            Rating
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <div class="news_container"></div>
 
         </section>
 
