Separando funcion de listeners de manera modular

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;400;700&family=Hind+Siliguri:wght@300&family=Poppins:wght@100;200;400;700;900&family=Raleway:wght@100;300;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df6d64d6a2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -47,6 +47,10 @@
     </header>
 
     <main>
+        <section id="resultado">
+            <div class="news_container"></div>
+        </section>
+
         <section id="nosotros">
             <h2><a href="#home">#</a>Sobre Nosotros</h2>
             
@@ -70,21 +74,21 @@
 
             <div class="team_container">
                 <div class="card">
-                    <div class="card_head"><img src="/img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
+                    <div class="card_head"><img src="./img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
                     <div class="card_body">
                         <h2 class="card_body_nombre">Luciano</h2>
                         <p class="card_body_descripcion">MovieReviews</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card_head"><img src="/img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
+                    <div class="card_head"><img src="./img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
                     <div class="card_body">
                         <h2 class="card_body_nombre">Rodrigo</h2>
                         <p class="card_body_descripcion">MovieReviews</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card_head"><img src="/img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
+                    <div class="card_head"><img src="./img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
                     <div class="card_body">
                         <h2 class="card_body_nombre">Nicolás</h2>
                         <p class="card_body_descripcion">MovieReviews</p>
@@ -179,7 +183,7 @@
         </div>
     </footer>
 
-    <script src="/js/validacion.js"></script>
+    <script src="./js/validacion.js"></script>
 </body>
 
 </html>
