modal al hacer click + video de trailer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>TPO - Movie/TV Show review</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;400;700&family=Hind+Siliguri:wght@300&family=Poppins:wght@100;200;400;700;900&family=Raleway:wght@100;300;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;400;700&family=Hind+Siliguri:wght@300&family=Poppins:wght@100;200;400;700;900&family=Raleway:wght@100;300;700&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/df6d64d6a2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -40,7 +42,9 @@
         <div class="banner">
             <div class="data">
                 <h2>Better Call Saul - Final Season</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis repellendus itaque voluptatem perspiciatis tempora facere labore placeat perferendis, necessitatibus nam molestiae dignissimos dolore minus optio velit esse quae dolorem aspernatur.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis repellendus itaque voluptatem
+                    perspiciatis tempora facere labore placeat perferendis, necessitatibus nam molestiae dignissimos
+                    dolore minus optio velit esse quae dolorem aspernatur.</p>
             </div>
             <img src="img/better-call-saul.png" alt="banner">
         </div>
@@ -53,7 +57,7 @@
 
         <section id="nosotros">
             <h2><a href="#home">#</a>Sobre Nosotros</h2>
-            
+
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellendus id aut, optio, labore
                 voluptate quas sit exercitationem adipisci atque eos harum, distinctio vero sapiente illo? Consequatur
@@ -163,6 +167,8 @@
 
         </section>
 
+        <div id='modal' class='modal hiden'></div>
+        <span id='cierre' class='cierre hiden'>&times</span>
     </main>
 
     <footer>
