Comportamiento del modal y fetch de trailers OK

--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
 
         </section>
 
-        <div id='modal' class='modal hiden'></div>
+        <div id='modal' class='modal hiden'>
+            <!-- Hcaer plantilla de modal para ingresar datos de las peliculas -->
+        </div>
         <span id='cierre' class='cierre hiden'>&times</span>
     </main>
 
