--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#novedades">Novedades</a></li>
                     <li><a href="#series">Series</a></li>
                     <li><a href="#peliculas">Películas</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="formulario.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -63,21 +63,21 @@
 
             <div class="team_container">
                 <div class="card">
-                    <div class="card_head"><img src="/img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
+                    <div class="card_head"><img src="./img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
                     <div class="card_body">
                         <h2 class="card_body_nombre">Luciano</h2>
                         <p class="card_body_descripcion">MovieReviews</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card_head"><img src="/img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
+                    <div class="card_head"><img src="./img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
                     <div class="card_body">
                         <h2 class="card_body_nombre">Rodrigo</h2>
                         <p class="card_body_descripcion">MovieReviews</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card_head"><img src="/img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
+                    <div class="card_head"><img src="./img/foto cv.jfif" alt="foto cv" class="card_head_img"></div>
                     <div class="card_body">
                         <h2 class="card_body_nombre">Nicolás</h2>
                         <p class="card_body_descripcion">MovieReviews</p>
@@ -96,7 +96,7 @@
             <div class="news_container">
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
                         <span class="novedad">NOVEDAD</span>
                     </div>
@@ -117,7 +117,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
                         <span class="novedad">NOVEDAD</span>
 
@@ -139,7 +139,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
                         <span class="novedad">NOVEDAD</span>
                     </div>
@@ -160,7 +160,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
                         <span class="novedad">NOVEDAD</span>
                     </div>
@@ -181,7 +181,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-film"></i></i></span>
                         <span class="novedad">NOVEDAD</span>
                     </div>
@@ -214,7 +214,7 @@
             <div class="news_container">
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
                     </div>
                     <div class="news_card_body">
@@ -234,7 +234,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
                     </div>
                     <div class="news_card_body">
@@ -254,7 +254,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
                     </div>
                     <div class="news_card_body">
@@ -274,7 +274,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></span>
                     </div>
                     <div class="news_card_body">
@@ -294,7 +294,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-tv"></i></i></span>
                     </div>
                     <div class="news_card_body">
@@ -327,7 +327,7 @@
             <div class="news_container">
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
                     </div>
                     <div class="news_card_body">
@@ -347,7 +347,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info">
                             <i class="fa-solid fa-film"></i>
                         </span>
@@ -369,7 +369,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
                     </div>
                     <div class="news_card_body">
@@ -389,7 +389,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-film"></i></span>
                     </div>
                     <div class="news_card_body">
@@ -409,7 +409,7 @@
 
                 <div class="news_card">
                     <div class="news_card_head">
-                        <img src="/img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
+                        <img src="./img/foto cv.jfif" alt="foto cv" class="news_card_head_img">
                         <span class="novedad_info"><i class="fa-solid fa-film"></i></i></span>
                     </div>
                     <div class="news_card_body">
@@ -427,41 +427,6 @@
                     </div>
                 </div>
             </div>
-
-        </section>
-
-        <section id="contacto">
-
-            <h2><a href="#home">#</a>Contacto</h2>
-
-            <h3>Suscribite para estar siempre actualizado con los últimos estrenos de Series y Películas</h3>
-
-            <form action="contacto.js" method="post">
-                <fieldset>
-                    <legend>Datos Personales</legend>
-                    <input type="text" name="nombre" id="nombre" placeholder="Nombre" required maxlength="50"
-                        data-nombre="nombre" autocomplete="name">
-                    <input type="text" name="apellido" id="apellido" placeholder="Apellido" required maxlength="100"
-                        data-apellido="apellido" autocomplete="family-name">
-                    <input type="tel" name="telefono" id="telefono" required data-telefono="telefono"
-                        pattern="(0-9){10}" placeholder="11-1111-1111" autocomplete="tel">
-                    <input type="date" name="nacimiento" id="nacimiento" data-nacimiento="nacimiento" required>
-
-                    <input type="text" name="pais" list="pais">
-                    <datalist id="pais">
-                        <option value="Argentina" label="ES-AR">
-                        <option value="España" label="ES">
-                        <option value="Italia" label="IT">
-                        <option value="Portugal" label="PR">
-                        <option value="Alemania" label="GE">
-                        <option value="Rusia" label="RU">
-                        <option value="Reino Unido" label="GB">
-                        <option value="Estados Unidos" label="EN">
-                    </datalist>
-
-                </fieldset>
-
-            </form>
 
         </section>
 
